List artifacts that are deployed in a Gateway
